# agentic_masters_genesis_forge_v1_crewai_project

./: .gitignore  context.json  deploy_adam_v5_failsafe.py  diagnostics_forger.py  dictionary_converter_script.py  env_to_toml.py  inject_config.py  inject_env_and_pyproject.py  knowledge_loader.py  main.py  pyproject.toml  refactor_imports.py  scan_secrets.py  validate_yaml.py
agentic_masters_genesis_forge_v1_crewai_project/: README.md  crew.py  forge_cloner.py  forge_diagnostic.py  forge_env_rebuild.ps1  forge_restructure.ps1  main.py  multi_team_initializer.py  validate_forge.py
agentic_masters_genesis_forge_v1_crewai_project/archive/old_forge_project_files/: adam_memory.json  agents.yaml  diagnostics_reactive.py  forge_comm_bus.json  forge_comm_hub.py  forge_comm_hub_v2.py  forge_comm_hub_v3.py  forge_knowledge.txt  forge_system_launch.py  orchestrator_agent.py  orchestrator_agent_v3.py  orchestrator_conscious_v6.py  orchestrator_memory.json  reactive_agent_base.py
agentic_masters_genesis_forge_v1_crewai_project/archive/scripts/: capture_genesis_results.py  clean_runner.py  fix_tasks_yaml.py  genesis_progress.json  parse_forge_outputs.py  pyproject.toml  resumable_runner.py  run_genesis_smart.ps1
agentic_masters_genesis_forge_v1_crewai_project/config/: agents.yaml  agents_backup.yaml  tasks_backup.yaml
agentic_masters_genesis_forge_v1_crewai_project/memory/: crew_memory.json
agentic_masters_genesis_forge_v1_crewai_project/tools/: generate_agents_yaml.py  generate_tasks_yaml.py
archive/old_forge_project_files/: diagnostics_forger.py  forge_desktop_ui.py  forge_master_runner.py  forge_presentation_neural.py  forge_presentation_reactive.py  forge_valicator_reactive.py  forge_validator.py  orchestrator_conscious_v4.py  orchestrator_conscious_v5.py  orchestrator_conscious_v5_blueprint.json  orchestrator_log.txt  performance_overdrive.py  rebuild_yaml_files.py  tasks.yaml
archive/scripts/: enhanced_runner.py  final_runner.py  forge_analyzer_crew.py  forge_presentation.py  genesis_forge_smart_runner.py  launch_all.py
config/: tasks.yaml
scripts/: agentic_dossier_compiler.py
tools/: crew_tools_upgrade.py
ui/: launch_ui.py
(+1 files in other folders)
